[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Hashike"
description = "Hashike runs, updates, and manages multiple containers on Linux hosts"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
    "boto3",
    "docker",
    "pyyaml"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "boto3-stubs[s3]",
    "build",
    "flake8",
    "isort",
    "mypy",
    "types-PyYAML"
]

[project.scripts]
hashike = "hashike:main"

[tool.setuptools]
packages = ["hashike"]

[tool.setuptools.dynamic]
version = { attr = "hashike.__version__" }
